objects/BBContact__c.object
<CustomObject>
    <description>Contacts registers for the events</description>
    <fields>
        <fullName>BBContactEmail__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>BBContact</label>
    <nameField>
        <label>BBContact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BBContacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>